--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "prisma": "^5.21.1"
